--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.google.android.gms:play-services:7.5.0'
-    compile 'com.google.android.gms:play-services-maps:7.5.0'
+//    compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.google.android.gms:play-services-maps:6.5.87'
 }
