--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,4 @@ proguard/
 *.log
 
 # do not provide api key publicly
-/app/src/release/res/values/google_maps_api.xml
-/app/src/debug/res/values/google_maps_api.xml
+/app/src/*/res/values/google_maps_api.xml
